--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -10,10 +10,9 @@ pipeline {
             steps {
                 container('jmeter') {
                     git branch: 'main', url: 'https://github.com/gtom-ping/perf-pingdata-lab'
-                    sh 'cp jmeter-files/user.properties ${JMETER_BIN}'
-                    sh 'cp jmeter-files/jaas.conf ${JMETER_BIN}'
-                    sh 'cp jmeter-files/krb5.conf ${JMETER_BIN}'
-                    sh 'echo ${${IMAGE_VERSION}'
+                    sh 'cp jmeter-files/user.properties ${SERVER_ROOT_DIR}'
+                    sh 'cp jmeter-files/jaas.conf ${SERVER_ROOT_DIR}'
+                    sh 'cp jmeter-files/krb5.conf ${SERVER_ROOT_DIR}'
                 }
             }
         }
@@ -21,7 +20,7 @@ pipeline {
         stage('Deny based on Access Token - Allow') {
             steps {
                 container('jmeter') {
-                    sh '${JMETER_BIN}/jmeter -n -f -t jmeter-files/access-api.jmx -l access-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_ROOT_DIR}/bin/jmeter -n -f -t jmeter-files/access-api.jmx -l access-api.csv -q jmeter-files/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 }
             }
@@ -31,7 +30,7 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 container('jmeter') {
-                    sh '${JMETER_BIN}/jmeter -n -f -t jmeter-files/deny-api.jmx -l deny-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_ROOT_DIR}/bin/jmeter -n -f -t jmeter-files/deny-api.jmx -l deny-api.csv -q jmeter-files/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 }
             }
