--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -10,9 +10,9 @@ pipeline {
             steps {
                 container('jmeter') {
                     git branch: 'main', url: 'https://github.com/gtom-ping/perf-pingdata-lab'
-                    sh 'cp jmeter-files/bin/user.properties ${SERVER_ROOT_DIR}'
-                    sh 'cp jmeter-files/bin/jaas.conf ${SERVER_ROOT_DIR}'
-                    sh 'cp jmeter-files/bin/krb5.conf ${SERVER_ROOT_DIR}'
+                    sh 'cp jmeter-files/bin/user.properties ${SERVER_BITS_DIR}'
+                    sh 'cp jmeter-files/bin/jaas.conf ${SERVER_BITS_DIR}'
+                    sh 'cp jmeter-files/bin/krb5.conf ${SERVER_BITS_DIR}'
                 }
             }
         }
@@ -20,7 +20,7 @@ pipeline {
         stage('Deny based on Access Token - Allow') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_ROOT_DIR}/bin/jmeter -n -f -t jmeter-files/access-api.jmx -l access-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t jmeter-files/access-api.jmx -l access-api.csv -q jmeter-files/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 }
             }
@@ -30,7 +30,7 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_ROOT_DIR}/bin/jmeter -n -f -t jmeter-files/deny-api.jmx -l deny-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t jmeter-files/deny-api.jmx -l deny-api.csv -q jmeter-files/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 }
             }
