--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -13,6 +13,10 @@ pipeline {
                     sh 'cp jmeter-files/bin/user.properties ${SERVER_BITS_DIR}'
                     sh 'cp jmeter-files/bin/jaas.conf ${SERVER_BITS_DIR}'
                     sh 'cp jmeter-files/bin/krb5.conf ${SERVER_BITS_DIR}'
+                    pwd()
+                    timeout(time: 1, unit: 'HOURS') {
+    // some block
+}
                 }
             }
         }
