--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -9,12 +9,10 @@ pipeline {
         stage('Configure JMeter') {
             steps {
                 container('jmeter') {
-                    sh 'pwd'
                     git branch: 'main', url: 'https://github.com/gtom-ping/perf-pingdata-lab'
-                    sh 'ls'
-                    sh 'cp jmeter-files/bin/user.properties ${SERVER_BITS_DIR}'
-                    sh 'cp jmeter-files/bin/jaas.conf ${SERVER_BITS_DIR}'
-                    sh 'cp jmeter-files/bin/krb5.conf ${SERVER_BITS_DIR}'
+                    sh 'cp apache-jmeter/bin/user.properties ${SERVER_BITS_DIR}/bin'
+                    sh 'cp apache-jmeter/bin/jaas.conf ${SERVER_BITS_DIR}/bin'
+                    sh 'cp apache-jmeter/bin/krb5.conf ${SERVER_BITS_DIR}/bin'
                 }
             }
         }
@@ -22,7 +20,7 @@ pipeline {
         stage('Deny based on Access Token - Allow') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t jmeter-files/access-api.jmx -l access-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 }
             }
@@ -32,7 +30,7 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t jmeter-files/deny-api.jmx -l deny-api.csv -q jmeter-files/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/deny-api.jmx -l deny-api.csv -q apache-jmeter/scripts/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 }
             }
