--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -6,9 +6,9 @@ pipeline {
     }
 
     environment {
-        CLONED_JMETER_HOME = "apache-jmeter"
-        CLONED_JMETER_BIN = "${CLONED_JMETER_HOME}/bin"
-        CLONED_JMETER_SCRIPTS = "${CLONED_JMETER_HOME}/scripts"
+        CLONED_JMETER_HOME = 'apache-jmeter'
+        CLONED_JMETER_BIN = '${CLONED_JMETER_HOME}/bin'
+        CLONED_JMETER_SCRIPTS = '${CLONED_JMETER_HOME}/scripts'
     }
 
     stages {
@@ -16,9 +16,11 @@ pipeline {
             steps {
                 container('jmeter') {
                     git branch: 'main', url: 'https://github.com/gtom-ping/perf-pingdata-lab'
-                    sh "cp ${CLONED_JMETER_BIN}/user.properties '${SERVER_BITS_DIR}'/bin"
-                    sh "cp ${CLONED_JMETER_BIN}/jaas.conf '${SERVER_BITS_DIR}'/bin"
-                    sh "cp ${CLONED_JMETER_BIN}/krb5.conf '${SERVER_BITS_DIR}'/bin"
+                    sh 'echo ${CLONED_JMETER_BIN}'
+                    sh 'echo {SERVER_BITS_DIR}'
+                    sh 'cp ${CLONED_JMETER_BIN}/user.properties ${SERVER_BITS_DIR}/bin'
+                    sh 'cp ${CLONED_JMETER_BIN}/jaas.conf ${SERVER_BITS_DIR}/bin'
+                    sh 'cp ${CLONED_JMETER_BIN}/krb5.conf ${SERVER_BITS_DIR}/bin'
                 }
             }
         }
@@ -26,7 +28,7 @@ pipeline {
         stage('Deny based on Access Token - Allow') {
             steps {
                 container('jmeter') {
-                    sh "'${SERVER_BITS_DIR}'/bin/jmeter -n -f -t ${CLONED_JMETER_SCRIPTS}/access-api.jmx -l access-api.csv -q ${CLONED_JMETER_SCRIPTS}/test.properties"
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t ${CLONED_JMETER_SCRIPTS}/access-api.jmx -l access-api.csv -q ${CLONED_JMETER_SCRIPTS}/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 }
             }
@@ -36,7 +38,7 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 container('jmeter') {
-                    sh "'${SERVER_BITS_DIR}'/bin/jmeter -n -f -t ${CLONED_JMETER_SCRIPTS}/deny-api.jmx -l deny-api.csv -q ${CLONED_JMETER_SCRIPTS}/test.properties"
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t ${CLONED_JMETER_SCRIPTS}/deny-api.jmx -l deny-api.csv -q ${CLONED_JMETER_SCRIPTS}/test.properties'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 }
             }
