--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -5,6 +5,11 @@ pipeline {
         }
     }
 
+    environment {
+        THREADS=${THREADS}
+        ITERATIONS=${ITERATIONS}
+    }
+
     stages {
         stage('Configure JMeter') {
             steps {
