--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
         stage('Deny based on Access Token - Allow') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties -JTHREADS=${THREADS} -JITERATIONS=${ITERATIONS}'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 }
             }
@@ -34,7 +34,7 @@ pipeline {
         stage('Deny based on Access Token - Deny') {
             steps {
                 container('jmeter') {
-                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/deny-api.jmx -l deny-api.csv -q apache-jmeter/scripts/test.properties'
+                    sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/deny-api.jmx -l deny-api.csv -q apache-jmeter/scripts/test.properties -JTHREADS=${THREADS} -JITERATIONS=${ITERATIONS}'
                     perfReport compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 }
             }
