--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -5,10 +5,10 @@ pipeline {
         }
     }
 
-    environment {
-        THREADS="${THREADS}"
-        ITERATIONS="${ITERATIONS}"
-    }
+    // environment {
+    //     THREADS="${THREADS}"
+    //     ITERATIONS="${ITERATIONS}"
+    // }
 
     stages {
         stage('Configure JMeter') {
