--- a/jenkins/DataGovernance/KubernetesPod.yaml
+++ b/jenkins/DataGovernance/KubernetesPod.yaml
@@ -19,9 +19,9 @@ spec:
 
   containers:
   - name: pingdatagovernance
-    # image: 574076504146.dkr.ecr.us-west-2.amazonaws.com/snapshot-builds/pingdatagovernance:latest
+    image: 574076504146.dkr.ecr.us-west-2.amazonaws.com/snapshot-builds/pingdatagovernance:latest
     # image: '574076504146.dkr.ecr.us-west-2.amazonaws.com/snapshot-builds/pingdatagovernance:8.3.0.0-SNAPSHOT-alpine-az11-20210112'
-    image: pingidentity/pingdatagovernance:latest
+    # image: pingidentity/pingdatagovernance:latest
     imagePullPolicy: Always
     env: 
       - name: SERVER_PROFILE_URL
