--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 container('jmeter') {
                     git branch: 'main', url: 'https://github.com/gtom-ping/perf-pingdata-lab'
                     sh 'cp apache-jmeter/bin/* ${SERVER_BITS_DIR}/bin'
-                    // sleep 60
+                    sleep 60
                 }
             }
         }
