--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         stage('Wait for Product Availability') {
             steps {
                 waitUntil {
-}                   httpRequest 'https://pingdatagovernance:7443/available-or-degraded-state', ignoreSslErrors: true, validResponseCodes: '200'
+}                   httpRequest url: 'https://pingdatagovernance:443/available-or-degraded-state', ignoreSslErrors: true, validResponseCodes: '200'
             }
         }
 
