--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -17,7 +17,9 @@ pipeline {
 
         stage('Wait for Product Availability') {
             steps {
-                sh 'timeout 360 wget --retry-connrefused --tries=6 --waitretry=60 -q https://pingdatagovernance:443/available-or-degraded-state -O /dev/null'
+                waitUntil {
+                    sh 'nc -vz pingdatagovernance 443'
+                }
             }
         }
 
