--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -17,11 +17,8 @@ pipeline {
 
         stage('Wait for Product Availability') {
             steps {
-                waitUntil(initialRecurrencePeriod: 15000) {
-					script {
-            			response = httpRequest ignoreSslErrors: true, url: 'https://pingdatagovernance:443/available-or-degraded-state', validResponseCodes: '100:599'
-						response.status == 200
-					}
+                waitUntil {
+            		httpRequest ignoreSslErrors: true, url: 'https://pingdatagovernance:443/available-or-degraded-state', validResponseCodes: '100:599'
 				}
             }
         }
