--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -18,7 +18,10 @@ pipeline {
         stage('Wait for Product Availability') {
             steps {
                 waitUntil {
-            		httpRequest ignoreSslErrors: true, url: 'https://pingdatagovernance:443/available-or-degraded-state', validResponseCodes: '200,503'
+					script {
+            			response = httpRequest ignoreSslErrors: true, url: 'https://pingdatagovernance:443/available-or-degraded-state', validResponseCodes: '100:599'
+						response.status == 200 || response.status == 503
+					}
 				}
             }
         }
