--- a/jenkins/DataGovernance/KubernetesPod.yaml
+++ b/jenkins/DataGovernance/KubernetesPod.yaml
@@ -80,14 +80,14 @@ spec:
       - "cat"
     resources:
       limits:
-        memory: 3Gi
-        cpu: "3"
+        memory: 2.5Gi
+        cpu: "2.5"
 
-  # - name: pingdataconsole
-  #   image: pingidentity/pingdataconsole:edge
-  #   ports:
-  #     - containerPort: 8443 
-  #   resources:
-  #     limits:
-  #       memory: 1Gi
-  #       cpu: "1"
+  - name: pingdataconsole
+    image: pingidentity/pingdataconsole:edge
+    ports:
+      - containerPort: 8443 
+    resources:
+      limits:
+        memory: "500Mi"
+        cpu: "0.5"
