add dg debug code

--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -27,6 +27,9 @@ pipeline {
 						response.status == 200 || response.status == 503
 					}
 				}
+                container('pingdatagovernance') {
+                    sh 'printenv'
+                }
             }
         }
 
