--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
 					}
 				}
                 container('pingdatagovernance') {
-                    sh 'printenv'
+                    buildName "${IMAGE_VERSION}"
                 }
             }
         }
