--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -28,12 +28,10 @@ pipeline {
 					}
 				}
                 container('pingdatagovernance') {
-                    script {
-                        IMAGE_VERSION = echo "${IMAGE_VERSION}"
+                        BUILD_NAME = echo ("${IMAGE_VERSION}")
+                        // IMAGE_VERSION = echo "${IMAGE_VERSION}"
 
                         buildName ${IMAGE_VERSION}
-                    }
-
                 }
             }
         }
