--- a/jenkins/DataGovernance/Jenkinsfile
+++ b/jenkins/DataGovernance/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
                 sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/access-api.jmx -l access-api.csv -q apache-jmeter/scripts/test.properties'
                 //perfReport errorFailedThreshold: 0, errorUnstableThreshold: 0, compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'access-api.csv'
                 // perfReport compareBuildPrevious: true, modeOfThreshold: true, modePerformancePerTestCase: true, modeThroughput: true, relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'access-api.csv'
-                perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, errorUnstableThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 20.0, relativeUnstableThresholdPositive: 20.0, sourceDataFiles: 'access-api.csv'
+                perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'access-api.csv'
             }
         }
 
@@ -44,7 +44,7 @@ pipeline {
                 sh '${SERVER_BITS_DIR}/bin/jmeter -n -f -t apache-jmeter/scripts/deny-api.jmx -l deny-api.csv -q apache-jmeter/scripts/test.properties'
                 //perfReport errorFailedThreshold: 0, errorUnstableThreshold: 0, compareBuildPrevious: true, configType: 'PRT', graphType: 'PRT', modePerformancePerTestCase: true, modeThroughput: true, sourceDataFiles: 'deny-api.csv'
                 // perfReport compareBuildPrevious: true, modeOfThreshold: true, modePerformancePerTestCase: true, modeThroughput: true, relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'deny-api.csv'
-                perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, errorUnstableThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 20.0, relativeUnstableThresholdPositive: 20.0, sourceDataFiles: 'deny-api.csv'
+                perfReport compareBuildPrevious: true, configType: 'PRT', errorFailedThreshold: 0, graphType: 'PRT', percentiles: '90', relativeUnstableThresholdNegative: 10.0, relativeUnstableThresholdPositive: 10.0, sourceDataFiles: 'deny-api.csv'
             }
         }
     }
